# complaint_service

./: .env.example  .gitignore  README.md  api_test.py  pyproject.toml
backend/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/routers/: chatbot.py  geocode.py  offices.py  prediction.py  realtime.py
backend/services/: gov24_scraper.py  ml_model.py  public_api.py  rag.py  scheduler.py
docs/: 민원업무편람(2026).hwpx
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/components/: AddressSearch.vue  AppHeader.vue  LoadingSpinner.vue  OfficeCard.vue  OfficeInfoCard.vue  OfficeMap.vue  QueueCard.vue
frontend/src/components/ui/: Badge.vue  Button.vue  Card.vue  Input.vue
frontend/src/composables/: useDragToClose.js
frontend/src/lib/: regionCentroids.js
frontend/src/router/: index.js
frontend/src/views/: ChatView.vue  HomeView.vue  OfficeDetailView.vue  OnlineView.vue
